--- a/sass/navigation/_nav-mobile.scss
+++ b/sass/navigation/_nav-mobile.scss
@@ -301,6 +301,10 @@ $nav-open-from-direction: top;
   user-select: none;
   z-index: 100000;
 
+  @media (min-width: $width-max-mobile) {
+    display: none;
+  }
+
   // Modern stuff (::after is first line, without ::after is first)
   &:not(.toggled-on) .hamburger-inner {
     transition: width $transition-duration;
